--- a/app/src/main/res/layout/activity_createaccount_editpatient.xml
+++ b/app/src/main/res/layout/activity_createaccount_editpatient.xml
@@ -25,7 +25,7 @@
         app:srcCompat="@drawable/ic_createaccount_bottom_panel" />
 
     <ImageView
-        android:id="@+id/topPanel"
+        android:id="@+id/docorclientTopPanel"
         android:layout_width="413dp"
         android:layout_height="190dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanel" />
+        app:layout_constraintTop_toBottomOf="@+id/docorclientTopPanel" />
 
     <EditText
         android:id="@+id/editText3"
