--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -37,7 +37,7 @@
             app:srcCompat="@drawable/ic_signin_top_panel" />
 
         <TextView
-            android:id="@+id/signInText2"
+            android:id="@+id/MedicsText"
             android:layout_width="match_parent"
             android:layout_height="71dp"
             android:fontFamily="@font/montserrat"
@@ -50,6 +50,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/top_panel"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="66dp"
+            android:layout_height="65dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/top_panel"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/ic_docorclient_checkmark" />
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
