--- a/app/src/main/res/layout/activity_edit_profile_client.xml
+++ b/app/src/main/res/layout/activity_edit_profile_client.xml
@@ -14,10 +14,10 @@
         android:spinnerMode="dropdown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Info" />
+        app:layout_constraintTop_toBottomOf="@+id/editProfileInfoText" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/editProfileExperienceField"
         android:layout_width="350dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <ImageView
-        android:id="@+id/top_panel2"
+        android:id="@+id/editProfileTopPanel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
@@ -43,7 +43,7 @@
         app:srcCompat="@drawable/ic_signin_top_panel" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editProfilePhoneNumberField"
         android:layout_width="350dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
@@ -54,10 +54,10 @@
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AddressField" />
+        app:layout_constraintTop_toBottomOf="@+id/editProfileAddressField" />
 
     <TextView
-        android:id="@+id/Contactdetails"
+        android:id="@+id/editProfileContactDetails"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
@@ -68,10 +68,10 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateField" />
+        app:layout_constraintTop_toBottomOf="@+id/editProfileDateOfBirthField" />
 
     <EditText
-        android:id="@+id/AddressField"
+        android:id="@+id/editProfileAddressField"
         android:layout_width="350dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
@@ -83,10 +83,10 @@
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Contactdetails" />
+        app:layout_constraintTop_toBottomOf="@+id/editProfileContactDetails" />
 
     <TextView
-        android:id="@+id/DateOfDirth"
+        android:id="@+id/editProfileDateOfBirthText"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
@@ -97,10 +97,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/common_profPic" />
+        app:layout_constraintTop_toBottomOf="@+id/editProfileAvatar" />
 
     <EditText
-        android:id="@+id/surnameField"
+        android:id="@+id/editProfileSurnameField"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
@@ -111,19 +111,19 @@
         android:hint="Surname"
         android:inputType="textPersonName"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/DateOfDirth"
-        app:layout_constraintEnd_toStartOf="@+id/common_profPic"
+        app:layout_constraintBottom_toTopOf="@+id/editProfileDateOfBirthText"
+        app:layout_constraintEnd_toStartOf="@+id/editProfileAvatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/midnameField"
+        app:layout_constraintTop_toBottomOf="@+id/editProfileMidNameField"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/common_profPic"
+        android:id="@+id/editProfileAvatar"
         android:layout_width="157dp"
         android:layout_height="165dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_panel2"
+        app:layout_constraintTop_toBottomOf="@+id/editProfileTopPanel"
         app:srcCompat="@drawable/ic_medprofile_avatar" />
 
     <TextView
@@ -144,7 +144,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/informationField2"
+        android:id="@+id/editProfileInformationField"
         android:layout_width="350dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
@@ -156,10 +156,10 @@
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText5" />
+        app:layout_constraintTop_toBottomOf="@+id/editProfileExperienceField" />
 
     <EditText
-        android:id="@+id/midnameField"
+        android:id="@+id/editProfileMidNameField"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
@@ -169,12 +169,12 @@
         android:hint="Middle name"
         android:inputType="textPersonName"
         android:textStyle="italic"
-        app:layout_constraintEnd_toStartOf="@+id/common_profPic"
+        app:layout_constraintEnd_toStartOf="@+id/editProfileAvatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameField" />
+        app:layout_constraintTop_toBottomOf="@+id/editProfileNameField" />
 
     <TextView
-        android:id="@+id/Info"
+        android:id="@+id/editProfileInfoText"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
@@ -185,10 +185,10 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/editProfilePhoneNumberField" />
 
     <EditText
-        android:id="@+id/dateField"
+        android:id="@+id/editProfileDateOfBirthField"
         android:layout_width="350dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
@@ -198,10 +198,10 @@
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DateOfDirth" />
+        app:layout_constraintTop_toBottomOf="@+id/editProfileDateOfBirthText" />
 
     <EditText
-        android:id="@+id/nameField"
+        android:id="@+id/editProfileNameField"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
@@ -212,9 +212,9 @@
         android:hint="Name"
         android:inputType="textPersonName"
         android:textStyle="italic"
-        app:layout_constraintEnd_toStartOf="@+id/common_profPic"
+        app:layout_constraintEnd_toStartOf="@+id/editProfileAvatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_panel2" />
+        app:layout_constraintTop_toBottomOf="@+id/editProfileTopPanel" />
 
     <!--<EditText-->
         <!--android:id="@+id/editText11"-->
@@ -259,7 +259,7 @@
         <!--app:layout_constraintTop_toBottomOf="@+id/editText9" />-->
 
     <TextView
-        android:id="@+id/EditProfileText"
+        android:id="@+id/editProfileText"
         android:layout_width="match_parent"
         android:layout_height="71dp"
         android:layout_marginTop="24dp"
