--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -66,6 +66,16 @@
             app:layout_constraintTop_toBottomOf="@+id/top_panel"
             app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/ic_docorclient_checkmark" />
+
+        <Button
+            android:id="@+id/listClearDataBaseButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="Clear DataBase"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
